...
      return;
    }
    setPage(page + 1);
    fetchFileInfos();
  };
  return (
    <View style={styles.container} testID='fileInfoScreen'>
      <FlatList
        contentContainerStyle={styles.listContent}
        data={fileInfoList}
        renderItem={renderRow}
        keyExtractor={keyExtractor}
        initialNumToRender={oneScreensWorth}
...
