...
      return;
    }
    setPage(page + 1);
    fetchFollowGroups();
  };
  return (
    <View style={styles.container} testID='followGroupScreen'>
      <FlatList
        contentContainerStyle={styles.listContent}
        data={followGroupList}
        renderItem={renderRow}
        keyExtractor={keyExtractor}
        initialNumToRender={oneScreensWorth}
...
